--- a/testimonials.html
+++ b/testimonials.html
@@ -23,7 +23,7 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo">Smith<span>.</span>CV</div>
+			<div class="logo">Alejandro<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="index.html">About</a></li>
@@ -68,55 +68,68 @@
 			<div class="general_info d-flex flex-xl-column flex-md-row flex-column">
 				<div>
 					<div class="general_info_image">
-						<div class="background_image" style="background-image:url(images/smith.jpg)"></div>
+						<div class="background_image" style="background-image:url(images/Alejandro.jpg)"></div>
 						<div class="header_button_2">
 							<a href="#">Available for freelance work</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
 						</div>
 					</div>
 				</div>
+				
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
 						<div class="general_info_title">General Information</div>
 						<ul class="general_info_list">
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_1.png" alt=""></div>
-								<div class="general_info_text">Name: <span>Jeremy Smith</span></div>
-							</li>
-							<li class="d-flex flex-row align-items-center justify-content-start">
-								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"></div>
-								<div class="general_info_text">Location: <span>London UK</span></div>
+								<div class="general_info_text">Name: <span>Alejandro A. Valenzuela</span></div>
 							</li>
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_2.png" alt=""></div>
+								<div class="general_info_text">Location: <span>Santiago, Chile</span></div>
+							</li>
+<!-- Take out birtday
+              <li class="d-flex flex-row align-items-center justify-content-start">
+								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_2.png" alt=""></div>
 								<div class="general_info_text">Date of Birth: <span>August 25, 1991</span></div>
 							</li>
+-->
+
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_3.png" alt=""></div>
-								<div class="general_info_text"><a href="mailto:contact@linque.com?subject=Job_Inquiry">contactme@templatename.com</a></div>
+								<div class="general_info_text"><a href="mailto:alejandro-v@yahoo.com?subject=Job_Inquiry">alejandro-v@yahoo.com</a></div>
 							</li>
+							
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_4.png" alt=""></div>
-								<div class="general_info_text">+76 6524 567862 763</div>
+								<div class="general_info_text">+56 9 9162 5200</div>
 							</li>
+	
+	<!--						
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_5.png" alt=""></div>
 								<div class="general_info_text"><a href="mailto:contact@linque.com">www.mytemplatename.com</a></div>
 							</li>
+	-->
+	
 						</ul>
 
 						<!-- Social -->
 						<div class="social_container">
 							<ul class="d-flex flex-row align-items-start justify-content-start">
+	<!--
 								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+		-->
+								<li><a href="https://www.linkedin.com/in/alejandro-valenzuela-radrigan-pmp%C2%AE-pmi-acp%C2%AE-1a640923/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+								<li><a href="https://github.com/aavalenzuela"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div>    <!-- General Information end -->
 
 			<!-- Main Content -->
 
