--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">HTML5 & CSS Developer</div>
-					<div class="main_title">Jeremy Smith</div>
+					<div class="main_subtitle">Senior Project Manager</div>
+					<div class="main_title">Alejandro A Valenzuela</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 					<div class="about_content">
@@ -166,10 +166,10 @@
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.25"></div>
+								<div class="loader" data-perc="0.20"></div>
 								<div class="loader_content text-center">
 									<div class="loader_title">pure luck</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
+									<div class="loader_subtitle">I find that the harder I work, the more luck I seem to have.</div>
 								</div>
 							</div>
 
