--- a/index.html
+++ b/index.html
@@ -139,8 +139,11 @@
 					<div class="about_content">
 						<div class="about_title">Description</div>
 						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit.</p>
+							<p>Professional with 20+ experience years working in development, operation and projects in sectors such as mining, telephony and IT, in Chile and USA. I have delivered value to clients from the strategic to operational levels, having led teams and been involved in initiatives developing business and operational strategic requirements through to delivering value through programs/projects and operational support.</p>
+							<p>Electronic Engineer by profession, Project Management with PMP, PMI-ACP and PRINCE2 certification. Diploma in Projects Management. I give all my experience to the task assigned, and I like to face new situations, technology and challenges. I am a critical thinker, I am able to break down complex problems looking for effectively solutions, even under uncertainty.</p>
+							<p>Besides, I like sports, reading and continuing learning.</p>
 						</div>
+
 
 						<!-- Loaders -->
 
@@ -148,37 +151,37 @@
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.75"></div>
+								<div class="loader" data-perc="0.83"></div>
 								<div class="loader_content text-center">
-									<div class="loader_title">intuition</div>
-									<div class="loader_subtitle">Etiam nec odio vestibulum est.</div>
+									<div class="loader_title">problem-solving</div>
+									<div class="loader_subtitle">There's no one-size-fits-all.</div>
 								</div>
 							</div>
 							
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.83"></div>
+								<div class="loader" data-perc="0.75"></div>
 								<div class="loader_content text-center">
-									<div class="loader_title">creativity</div>
-									<div class="loader_subtitle">Odio vestibulum est mattis.</div>
+									<div class="loader_title">Team leadership</div>
+									<div class="loader_subtitle">Leadership involves finding a parade and getting in front of it.</div>
 								</div>
 							</div>
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.20"></div>
+								<div class="loader" data-perc="0.92"></div>
+								<div class="loader_content text-center">
+									<div class="loader_title">Critical Thinking</div>
+									<div class="loader_subtitle">Too often we enjoy the comfort of opinion without the discomfort of thought.</div>
+								</div>
+							</div>
+
+							<!-- Loader -->
+							<div class="loader_container">
+								<div class="loader" data-perc="0.50"></div>
 								<div class="loader_content text-center">
 									<div class="loader_title">pure luck</div>
 									<div class="loader_subtitle">I find that the harder I work, the more luck I seem to have.</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="loader_container">
-								<div class="loader" data-perc="0.95"></div>
-								<div class="loader_content text-center">
-									<div class="loader_title">awesomeness</div>
-									<div class="loader_subtitle">Vestibulum est mattis effic.</div>
 								</div>
 							</div>
 
