--- a/portfolio.html
+++ b/portfolio.html
@@ -162,15 +162,26 @@
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 					<div class="portfolio_grid grid clearfix">
 
-						<!-- Portfolio Item -->
+						<!-- centeredPopup function https://www.quackit.com/javascript/popup_windows.cfm -->
+<script language="javascript">
+  var popupWindow = null;
+  function centeredPopup(url,winName,w,h,scroll){
+    LeftPosition = (screen.width) ? (screen.width-w)/2 : 0;
+    TopPosition = (screen.height) ? (screen.height-h)/2 : 0;
+    settings ='height='+h+',width='+w+',top='+TopPosition+',left='+LeftPosition+',scrollbars='+scroll+',resizable' 
+    popupWindow = window.open(url,winName,settings)
+  }
+</script>
 
+
+						<!-- Portfolio Item -->
 
 							<div class="grid-item portfolio_item p_integration">
 							<img src="images/portfolio_1.jpg" alt="">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
-								<div class="portfolio_item_title">Technical Evaluation for the use of the CEDIZ System on Mobile Platforms/div>
+								<div class="portfolio_item_title">Technical Evaluation for the use of the CEDIZ System on Mobile Platforms</div>
 								<div class="portfolio_item_body">Jan 2014 - Mar 2014</div>
-								<div class="portfolio_item_link"><a href="#">See More</a></div>
+								<div class="portfolio_item_link"><a href="portfolio/p_cediz.html" onclick="centeredPopup(this.href,'myWindow','700','300','yes');return false">See More</a></div>
 							 </div>
 						   </div>
 						   </div>						   
