Working version of first project

--- a/portfolio/p_cediz.html
+++ b/portfolio/p_cediz.html
@@ -16,17 +16,18 @@
   </head>
   
   
-  <body>
+  <body style="background-color: #f8f4f4">
   
   
   
 
   			<div class="main_content">
-  			    	<div class="main_subtitle"><br/><br/>Project CEDIZ</div>
+  			    	<div class="main_subtitle"><br/><br/>Technical Evaluation for the use of the CEDIZ System on Mobile Platforms Project</div>
   				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
   <div class="about_text">
-							<p>Some of the project I have been working on. I made a personal classification for easy browsing.</p>
-							<p>And they keep growing....</p>
+							<p>Develop of State of Art of Mobile & Table Geographic Information Systems application for a public sector company.</p>
+							<p>This step permit review the scope and technical aspect for this geographic reference application.</p>
+							<br/>
 						</div>
 
 
