--- a/portfolio.html
+++ b/portfolio.html
@@ -177,11 +177,11 @@
 						<!-- Portfolio Item -->
 
 							<div class="grid-item portfolio_item p_integration">
-							<img src="images/portfolio_1.jpg" alt="">
+							<img src="images/portfolio_cediz.jpg" alt="">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
 								<div class="portfolio_item_title">Technical Evaluation for the use of the CEDIZ System on Mobile Platforms</div>
 								<div class="portfolio_item_body">Jan 2014 - Mar 2014</div>
-								<div class="portfolio_item_link"><a href="portfolio/p_cediz.html" onclick="centeredPopup(this.href,'myWindow','700','300','yes');return false">See More</a></div>
+								<div class="portfolio_item_link"><a href="portfolio/p_cediz.html" onclick="centeredPopup(this.href,'myWindow','700','400','yes');return false">See More</a></div>
 							 </div>
 						   </div>
 						   </div>						   
