--- a/portfolio.html
+++ b/portfolio.html
@@ -177,6 +177,18 @@
 						<!-- Portfolio Item -->
 
 							<div class="grid-item portfolio_item p_integration">
+							<img src="images/portfolio_drp.jpg" alt="Disaster Recovery Plan">
+							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
+								<div class="portfolio_item_title">Update & Test DRP Anglo Copper</div>
+								<div class="portfolio_item_body">Mar 2014 - Jul 2014</div>
+								<div class="portfolio_item_link"><a href="portfolio/p_drp.html" onclick="centeredPopup(this.href,'myWindow','700','500','yes');return false">See More</a></div>
+							 </div>
+						   </div>
+					   
+
+
+
+							<div class="grid-item portfolio_item p_integration">
 							<img src="images/portfolio_cediz.jpg" alt="">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
 								<div class="portfolio_item_title">Technical Evaluation for the use of the CEDIZ System on Mobile Platforms</div>
@@ -184,7 +196,8 @@
 								<div class="portfolio_item_link"><a href="portfolio/p_cediz.html" onclick="centeredPopup(this.href,'myWindow','700','400','yes');return false">See More</a></div>
 							 </div>
 						   </div>
-						   </div>						   
+
+
 
 							<div class="grid-item portfolio_item p_integration">
 							<img src="images/portfolio_1.jpg" alt="">
