Add Emerson project

--- a/portfolio.html
+++ b/portfolio.html
@@ -176,6 +176,17 @@
 
 						<!-- Portfolio Item -->
 
+							<div class="grid-item portfolio_item p_sofware p_mining p_machinel">
+							<img src="images/portfolio_cbm.jpg" alt="Emerson Plantweb Advisor for Mining">
+							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
+								<div class="portfolio_item_title">Emerson Plantweb Advisor for Mining</div>
+								<div class="portfolio_item_body">Jan 2017 - Dec 2017</div>
+								<div class="portfolio_item_link"><a href="portfolio/p_cbm.html" onclick="centeredPopup(this.href,'myWindow','700','500','yes');return false">See More</a></div>
+
+							 </div>
+						   </div>
+
+
 							<div class="grid-item portfolio_item p_integration">
 							<img src="images/portfolio_drp.jpg" alt="Disaster Recovery Plan">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
