--- a/portfolio/p_drp.html
+++ b/portfolio/p_drp.html
@@ -21,7 +21,7 @@
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
           <div class="about_text">
 							<p>Review and test the Disaster Recovery Plan (DRP) as it for customer services running today. Look for gaps, propose improvement, perform some of them and review the whole procedure starting from the BIAS.</p>
-							<p>This is part of the Business continuity plans (BCPs) and has the complexity of review all the plans in place, update them, test them involving all the cotractor required and keep all the application involved running with minimal interruption.</p>
+							<p>This is part of the Business continuity plans (BCPs) and has the complexity of review all the plans in place, update them, test them involving all the contractor required and keep all the application involved running with minimal interruption.</p>
 							<br/>
 						</div>
 
