--- a/portfolio.html
+++ b/portfolio.html
@@ -251,11 +251,11 @@
 						   
 
 							<div class="grid-item portfolio_item p_sofware">
-							<img src="images/portfolio_1.jpg" alt="">
+							<img src="images/portfolio_CopperBlkModel.jpg" alt="">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
 								<div class="portfolio_item_title">BlockGrade Module</div>
 								<div class="portfolio_item_body">Apr 2008 - Jul 2008</div>
-								<div class="portfolio_item_link"><a href="#">See More</a></div>
+								<div class="portfolio_item_link"><a href="portfolio/p_blkgrade.html" onclick="centeredPopup(this.href,'myWindow','700','500','yes');return false">See More</a></div>
 							 </div>
 						   </div>
 
