Class of Block Grade Project

--- a/portfolio.html
+++ b/portfolio.html
@@ -250,10 +250,10 @@
 						   </div>
 						   
 
-							<div class="grid-item portfolio_item p_sofware">
+							<div class="grid-item portfolio_item p_sofware p_mining">
 							<img src="images/portfolio_CopperBlkModel.jpg" alt="">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
-								<div class="portfolio_item_title">BlockGrade Module</div>
+								<div class="portfolio_item_title">Block Grade Module</div>
 								<div class="portfolio_item_body">Apr 2008 - Jul 2008</div>
 								<div class="portfolio_item_link"><a href="portfolio/p_blkgrade.html" onclick="centeredPopup(this.href,'myWindow','700','500','yes');return false">See More</a></div>
 							 </div>
