Add Project Install IM infrastructure for new drills in Los Bronces

--- a/portfolio.html
+++ b/portfolio.html
@@ -176,6 +176,18 @@
 
 						<!-- Portfolio Item -->
 
+							<div class="grid-item portfolio_item p_mining">
+							<img src="images/portfolio_drill-h.jpg" alt="Install IM infrastructure for new drills in Los Bronces">
+							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
+								<div class="portfolio_item_title">Install IM infrastructure for new drills in Los Bronces</div>
+								<div class="portfolio_item_body">Sep 2022 - Sep 2023</div>
+								<div class="portfolio_item_link"><a href="portfolio/p_IMDrill.html" onclick="centeredPopup(this.href,'myWindow','700','500','yes');return false">See More</a></div>
+
+							 </div>
+						   </div>
+
+
+
 							<div class="grid-item portfolio_item p_sofware p_mining p_machinel">
 							<img src="images/portfolio_cbm.jpg" alt="Emerson Plantweb Advisor for Mining">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
