--- a/portfolio.html
+++ b/portfolio.html
@@ -187,6 +187,17 @@
 						   </div>
 
 
+							<div class="grid-item portfolio_item p_mining">
+							<img src="images/portfolio_dozer-s.jpg" alt="Cat® MineStar™ Command for Dozing in Los Bronces">
+							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
+								<div class="portfolio_item_title">Cat® MineStar™ Command for Dozing in Los Bronces</div>
+								<div class="portfolio_item_body">Feb 2021 - Jun 2022</div>
+								<div class="portfolio_item_link"><a href="portfolio/p_IMDozer.html" onclick="centeredPopup(this.href,'myWindow','700','700','yes');return false">See More</a></div>
+
+							 </div>
+						   </div>
+
+
 
 							<div class="grid-item portfolio_item p_sofware p_mining p_machinel">
 							<img src="images/portfolio_cbm.jpg" alt="Emerson Plantweb Advisor for Mining">
