Add Autonomous SmartROC project

--- a/portfolio.html
+++ b/portfolio.html
@@ -187,6 +187,19 @@
 						   </div>
 
 
+
+							<div class="grid-item portfolio_item p_mining">
+							<img src="images/portfolio_AutonomousSmartROC-s.jpg" alt="Autonomous SmartROC drilling in Los Bronces">
+							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
+								<div class="portfolio_item_title">Autonomous SmartROC drilling in Los Bronces</div>
+								<div class="portfolio_item_body">Jul 2022 - Aug 2023</div>
+								<div class="portfolio_item_link"><a href="portfolio/p_AutonomousSmartROC.html" onclick="centeredPopup(this.href,'myWindow','700','500','yes');return false">See More</a></div>
+
+							 </div>
+						   </div>
+
+
+
 							<div class="grid-item portfolio_item p_mining">
 							<img src="images/portfolio_dozer-s.jpg" alt="Cat® MineStar™ Command for Dozing in Los Bronces">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
