Add PI System AA Program

--- a/portfolio.html
+++ b/portfolio.html
@@ -247,11 +247,11 @@
 
 
 							<div class="grid-item portfolio_item p_integration">
-							<img src="images/portfolio_1.jpg" alt="">
+							<img src="images/portfolio_PISysteminfographic.jpg" alt="Enterprise PI Program Anglo American">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
 								<div class="portfolio_item_title">Enterprise PI Program Anglo American</div>
 								<div class="portfolio_item_body">Jan 2013 - Feb 2014</div>
-								<div class="portfolio_item_link"><a href="#">See More</a></div>
+								<div class="portfolio_item_link"><a href="portfolio/p_PI.html" onclick="centeredPopup(this.href,'myWindow','700','400','yes');return false">See More</a></div>
 							 </div>
 						   </div>
 					
