--- a/portfolio.html
+++ b/portfolio.html
@@ -177,6 +177,16 @@
 
 						<!-- Portfolio Item -->
 
+							<div class="grid-item portfolio_item p_integration">
+							<img src="images/Porsche911.png" alt="M&A Ditec Integration">
+							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
+								<div class="portfolio_item_title">M&A Ditec Integration</div>
+								<div class="portfolio_item_body">Nov 2023 - Oct 2024</div>
+								<div class="portfolio_item_link"><a href="portfolio/p_Ditec.html" onclick="centeredPopup(this.href,'myWindow','700','500','yes');return false">See More</a></div>
+
+							 </div>
+						   </div>
+
 							<div class="grid-item portfolio_item p_mining">
 							<img src="images/portfolio_drill-s.jpg" alt="Install IM infrastructure for new drills in Los Bronces">
 							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
@@ -186,8 +196,6 @@
 
 							 </div>
 						   </div>
-
-
 
 							<div class="grid-item portfolio_item p_mining">
 							<img src="images/portfolio_AutonomousSmartROC-s.jpg" alt="Autonomous SmartROC drilling in Los Bronces">
