Add Arrhythmia project

--- a/portfolio.html
+++ b/portfolio.html
@@ -208,6 +208,16 @@
 						   </div>
 
 
+							<div class="grid-item portfolio_item p_machinel">
+							<img src="images/fphys-14-1246746-g002.jpg" alt="Cardiac Arrhythmia DataScience Project">
+							<div class="portfolio_item_content d-flex flex-column align-items-center justify-content-center">
+								<div class="portfolio_item_title">Cardiac Arrhythmia DataScience Project</div>
+								<div class="portfolio_item_body">Jun 2021 - Jul 2021</div>
+								<div class="portfolio_item_link"><a href="portfolio/p_Arrhythmia.html" onclick="centeredPopup(this.href,'myWindow','700','700','yes');return false">See More</a></div>
+
+							 </div>
+						   </div>
+
 
 							<div class="grid-item portfolio_item p_mining">
 							<img src="images/portfolio_dozer-s.jpg" alt="Cat® MineStar™ Command for Dozing in Los Bronces">
