small fixed (Bachelor, bold)in Education

--- a/education.html
+++ b/education.html
@@ -167,7 +167,7 @@
 									<div class="edu_subtitle">Universidad Diego Portales</div>
 								</div>
 								<div class="edu_text">
-									<p>During my Diploma in Project Management, I gained a solid understanding of the core principles outlined in the PMBOK (Project Management Body of Knowledge). The course focused on practical applications of key project management processes, from initiation and planning to execution and closing. I developed skills in risk management, quality, budgeting, and stakeholder communication, and learned how to manage projects effectively within the PMBOK framework.</p>
+									<p>During my <b>Diploma in Project Management</b>, I gained a solid understanding of the core principles outlined in the <b>PMBOK</b> (Project Management Body of Knowledge). The course focused on practical applications of key project management processes, from initiation and planning to execution and closing. I developed skills in risk management, quality, budgeting, and stakeholder communication, and learned how to manage projects effectively within the PMBOK framework.</p>
 								</div>
 							</div>
 						</div>
@@ -178,11 +178,11 @@
 							<div><div class="edu_image"><img src="images/USM.png" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-									<div class="edu_title">Bachelor of Science in Electronics Engineering</div>
+									<div class="edu_title">Electronics Engineering</div>
 									<div class="edu_subtitle">Universidad Técnica Federico Santa María</div>
 								</div>
 								<div class="edu_text">
-									<p>During my of Science in Electronics Engineering with a focus on Computer Science at my alma mater, Universidad Técnica Federico Santa María, I developed a comprehensive understanding of both hardware and software systems. The program provided me with in-depth knowledge in areas like circuit design, digital systems, and signal processing, while also allowing me to explore core computer science topics such as programming, algorithms, and data structures. This blend of disciplines equipped me with the ability to design and implement integrated solutions that bridge both electronics and software development.</p>
+									<p>During my <b>Bachelor of Science in Electronics Engineering</b> with a focus on Computer Science at my alma mater, <b>Universidad Técnica Federico Santa María</b>, I developed a comprehensive understanding of both hardware and software systems. The program provided me with in-depth knowledge in areas like circuit design, digital systems, and signal processing, while also allowing me to explore core computer science topics such as programming, algorithms, and data structures. This blend of disciplines equipped me with the ability to design and implement integrated solutions that bridge both electronics and software development.</p>
 								</div>
 							</div>
 						</div>
